deploy/yamls/test-repo-j77jyk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: test-repo-j77jyk
  name: test-repo-j77jyk
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: test-repo-j77jyk
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: test-repo-j77jyk
      name: test-repo-j77jyk
    spec:
      containers:
        - image: quay.io/test/test-repo-j77jyk:latest
          imagePullPolicy: Always
          name: test-repo-j77jyk
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
