deploy/yamls/test-repo-j77jyk-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: test-repo-j77jyk
  name: test-repo-j77jyk
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: test-repo-j77jyk
  type: ClusterIP
status:
  loadBalancer: {}
